--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "3.0.0"
   }
 }
