--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^5.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
