--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.3.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
