--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
     "prettier": "3.0.0"
   }
 }
