--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "instead": "^1.0.3",
+    "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
+    "react-test-renderer": "^18.2.0",
     "react-toastify": "^5.5.0",
     "web-vitals": "^2.1.4"
   },
@@ -48,9 +50,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
+    "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "prettier": "3.0.0"
+    "@testing-library/jest-dom": "^6.1.4",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
+    "prettier": "3.0.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
