--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-http": "^1.5.17",
     "axios": "^1.5.1",
+    "babel-plugin-import-graphql": "^2.8.1",
     "dotenv": "^16.3.1",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
     "instead": "^1.0.3",
     "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.1",
@@ -22,6 +27,7 @@
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^18.2.0",
     "react-toastify": "^5.5.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,11 +55,17 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.22.20",
+    "@babel/compat-data": "7.19.4",
+    "@babel/core": "7.19.6",
+    "@babel/generator": "7.19.6",
+    "@babel/helper-compilation-targets": "7.19.3",
+    "@babel/helper-create-class-features-plugin": "7.19.0",
+    "@babel/helper-module-transforms": "7.19.6",
+    "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
+    "babel-loader": "^9.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
