--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-test-renderer": "^18.2.0",
     "react-toastify": "^5.5.0",
     "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
