--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
+    "react-scroll": "^1.9.0",
     "react-test-renderer": "^18.2.0",
     "react-toastify": "^5.5.0",
     "typescript": "^5.2.2",
